public/css/main.css
body { padding: 0; margin: 0; font-family: Helvetica, Arial, sans-serif; background-color: #3c7b9b; font-size: 15px; }
h3 { margin: 0; text-align: center; }
* { box-sizing: border-box; }
p { word-wrap: break-word; }
.container { position: absolute; top: 3%; bottom: 3%; left: 3%; right: 3%; }
label { display: block; width: 150px; margin: 10px 0 5px; }
input { display: inline-block; font-size: 1em; }
.input-text { position: absolute; top: 0; left: 0; right: 0; width: 100%; height: 100%; padding: 10px; border: none; border-radius: 4px; }
input#submit { -webkit-appearance: none; position: absolute; top: 0; right: 0; width: 50px; height: 100%; text-align: center; font-weight: bold; border-radius: 0 3px 3px 0; border: none; font-size: 1.5em; color: white; background-color: lightgreen; }
.form-wrapper { position: absolute; bottom: 55px; left: 0; right: 0; height: 40px; border: #bfbfbf 1px solid; border-radius: 4px; text-align: center; }
#message { bottom: 15px; left: 15px; right: 15px; height: 40px; border: #bfbfbf 1px solid; border-radius: 4px; text-align: center; }
#outputWrapper { position: absolute; width: 100%; height: 73%; top: 0; left: 0; padding: 15px; border: #bfbfbf 1px solid; border-radius: 4px; box-shadow: #bfbfbf 2px 2px 2px; background-color: white; }
#output { position: absolute; top: 40px; bottom: 55px; left: 15px; right: 0; overflow: auto; }
.spacer { position: absolute; width: 100%; height: 2%; top: 73%; left: 0; }
#logWrapper { position: absolute; width: 100%; height: 25%; top: 75%; left: 0; overflow: auto; padding: 0 15px; border: #bfbfbf 1px solid; border-radius: 4px; box-shadow: #bfbfbf 2px 2px 2px; background-color: white; }
.author { font-weight: bold; color: blue; }
.error-message { color: red; }
.mongo-message { color: blue; }
.user-message { white-space: pre-line; }

